Ajout de la route doc

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.21.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "postgre": "^0.1.8"
+    "postgre": "^0.1.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
